gitops/k8s1/infrastructure/traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      hostname: argocd.k8s1.christiank.dev
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls
